--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,14 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="50dp"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     tools:context=".guest.ProfileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@color/design_default_color_primary_dark"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp"
+        android:id="@+id/imguserprofile"
+        />
+
+
+    <TextView
+        android:id="@+id/textView_NameProfile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:text=""
+        android:layout_marginBottom="10dp"
+        android:gravity="center_horizontal"/>
+
+    <TextView
+        android:id="@+id/txt_manageaccountprofile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Manage Account Profile"
+        android:gravity="center_horizontal"
+        android:textSize="20sp"
+        android:textColor="@color/design_default_color_primary_dark"
+        android:layout_marginBottom="10dp"/>
+
+
+</LinearLayout>
