--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,16 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="50dp"
+    android:background="#F0F0FF"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     tools:context=".guest.ProfileFragment">
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="#FFFFFF"
+    android:gravity="center_horizontal">
 
+    <ImageView
+        android:id="@+id/image_manageaccountprofile"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="0dp"
+        android:layout_width="50dp"
+        android:padding="6dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_baseline_edit_24"
+        android:layout_gravity="right"
+        />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_marginTop="-40dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:src="@color/design_default_color_primary_dark"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp"
@@ -25,20 +42,54 @@
         android:id="@+id/textView_NameProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:textSize="25sp"
         android:text=""
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         android:gravity="center_horizontal"/>
 
     <TextView
-        android:id="@+id/txt_manageaccountprofile"
+        android:id="@+id/textView_EmailProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Manage Account Profile"
-        android:gravity="center_horizontal"
-        android:textSize="20sp"
-        android:textColor="@color/design_default_color_primary_dark"
-        android:layout_marginBottom="10dp"/>
+        android:textSize="18sp"
+        android:layout_marginBottom="10dp"
+        android:text=""
+        android:gravity="center_horizontal"/>
+    <TextView
+        android:id="@+id/textView_ContactNoProfile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:text=""
+
+        android:gravity="center_horizontal"/>
+    <TextView
+        android:id="@+id/textView_AddressProfile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:text=""
+        android:gravity="center_horizontal"/>
+    <TextView
+        android:id="@+id/textView_SpecializationProfile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:text=""
+        android:gravity="center_horizontal"/>
+    <TextView
+        android:id="@+id/textView_GenderProfile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:textSize="18sp"
+        android:text=""
+        android:gravity="center_horizontal"/>
+
+</LinearLayout>
+
+
 
 
 </LinearLayout>
