--- a/app/src/main/res/menu/bottom_nav_menu_employer.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_employer.xml
@@ -8,4 +8,8 @@
         android:id="@+id/navigation_employerapplicants"
         android:title="Applicants" />
 
+    <item
+        android:id="@+id/navigation_employerprofile"
+        android:title="Profile" />
+
 </menu>
