--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="#F0F0FF"
     android:gravity="center_horizontal"
-    tools:context=".guest.EditProfileActivity">
+    tools:context=".applicant.EditProfileActivity">
 
 
 
