--- a/app/src/main/res/layout/cardview_view_educationalbackground.xml
+++ b/app/src/main/res/layout/cardview_view_educationalbackground.xml
@@ -11,13 +11,24 @@
         android:orientation="vertical"
         android:layout_margin="10dp">
 
+
         <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+            <ImageView
+                android:id="@+id/image_editeducation"
+                android:layout_marginRight="0dp"
+                android:layout_width="50dp"
+                android:padding="6dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_baseline_edit_24"
+                android:layout_gravity="right"
+                />
 
             <TextView
+                android:layout_marginTop="-40dp"
                 android:id="@+id/textView_applicantschool"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -25,6 +36,7 @@
                 android:text="Sample School"
                 android:textStyle="bold"
                 android:textSize="20sp"/>
+
 
             <TextView
                 android:id="@+id/textView_applicantcourse"
