--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -64,6 +64,7 @@
         android:id="@+id/applicantprofile_contactno"
         android:background="#FFFFFF"
         android:padding="10dp"
+        android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18dp"
