--- a/app/src/main/res/layout/activity_update_work_experience.xml
+++ b/app/src/main/res/layout/activity_update_work_experience.xml
@@ -1,9 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#F0F0FF"
+    android:gravity="center_horizontal"
     tools:context=".applicant.UpdateWorkExperienceActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical">
+
+        <EditText
+            android:background="#FFFFFF"
+            android:padding="10dp"
+            android:id="@+id/updateedittext_addworkposition"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Position"
+            android:textSize="18dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical">
+
+        <EditText
+            android:background="#FFFFFF"
+            android:padding="10dp"
+            android:id="@+id/updateedittext_addworkcompanyname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Company Name"
+            android:textSize="18dp"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:layout_gravity="left"
+        android:layout_marginLeft="8dp"
+        android:text="Specialization"
+        android:textSize="18dp"/>
+    <!--    <Spinner-->
+    <!--        android:spinnerMode="dialog"-->
+    <!--        android:layout_gravity="left"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:id="@+id/spinner_workspecialization"/>-->
+
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical">
+
+        <TextView
+            android:background="#FFFFFF"
+            android:padding="10dp"
+            android:id="@+id/updatetv_workspecialization"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Specialization"
+            android:textSize="18dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical">
+
+        <TextView
+            android:background="#FFFFFF"
+            android:padding="10dp"
+            android:id="@+id/updateedittext_workstartdate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Start Date"
+            android:textSize="18dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical">
+
+        <TextView
+            android:background="#FFFFFF"
+            android:padding="10dp"
+            android:id="@+id/updateedittext_workenddate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="End Date"
+            android:textSize="18dp"/>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/updatetxtview_currentlyworking"
+            android:padding="10dp"
+            android:background="#FFFFFF"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:hint="Currently Working"
+            android:textSize="18dp"/>
+
+        <Switch
+            android:id="@+id/updateswitch_currentlyworking"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@+id/updatetxtview_currentlyworking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/updatebtnsaveworkexperience"
+        android:layout_marginTop="20dp"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/shapebutton"
+        android:text="Save"
+        android:textColor="#FFFFFF"/>
+
+    <Button
+        android:id="@+id/deletebtnworkexperience"
+        android:layout_marginTop="20dp"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/shapebutton"
+        android:text="Remove Work Experience"
+        android:textColor="#FFFFFF"/>
+
+</LinearLayout>
+
