--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -39,14 +39,28 @@
 <!--                android:layout_width="wrap_content"-->
 <!--                android:layout_height="wrap_content"-->
 <!--                android:id="@+id/spinner_category"/>-->
-            <Spinner
-                android:layout_marginTop="40dp"
+
+            <TextView
                 android:layout_toRightOf="@+id/tv_searchspecialization"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/spinner_location"/>
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="20dp"
+                android:textAlignment="center"
+                android:textColor="@color/design_default_color_primary"
+                android:text="Region"
+                android:textSize="18sp"
+                android:id="@+id/tv_searchlocation"/>
+
+<!--            <Spinner-->
+<!--                android:layout_marginTop="40dp"-->
+<!--                android:layout_toRightOf="@+id/tv_searchspecialization"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:id="@+id/spinner_location"/>-->
             <TextView
-                android:layout_toRightOf="@+id/spinner_location"
+                android:layout_marginLeft="20dp"
+                android:layout_toRightOf="@+id/tv_searchlocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
