screen orientation, slider in tablayout, get intent data from job posts to job description is complete

--- a/app/src/main/res/layout/cardview_view_jobs.xml
+++ b/app/src/main/res/layout/cardview_view_jobs.xml
@@ -41,11 +41,11 @@
                 android:textSize="20sp"/>
 
             <TextView
-                android:id="@+id/textView_jobaddress"
+                android:id="@+id/textView_joblocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:text="Sample Job Address"
+                android:text="Sample Job Location"
                 android:textStyle="bold"
                 android:textSize="20sp"/>
 
