--- a/app/src/main/res/layout/activity_applicant_job_description.xml
+++ b/app/src/main/res/layout/activity_applicant_job_description.xml
@@ -36,7 +36,7 @@
                 android:layout_height="100dp"
                 android:src="@color/design_default_color_primary_dark"
                 android:layout_gravity="center_horizontal"
-                android:id="@+id/imguserprofile"
+                android:id="@+id/img_jobdesc_logo"
                 />
 
 
@@ -48,6 +48,16 @@
                 android:textColor="@color/black"
                 android:textSize="25sp"
                 android:text="Junior Programmer"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="10dp"/>
+
+            <TextView
+                android:id="@+id/tv_jobdesc_jobcompany"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:text="Codify Ltd"
                 android:gravity="center_horizontal"
                 android:layout_marginBottom="20dp"/>
 
@@ -69,7 +79,7 @@
                 <com.google.android.material.tabs.TabLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tab_layout"
+                    android:id="@+id/tab_layout_jobdescription"
                     app:tabTextColor="@color/design_default_color_primary"
                     app:tabIndicatorColor="@color/design_default_color_primary"
                     app:tabSelectedTextColor="@color/design_default_color_primary"
@@ -89,6 +99,7 @@
 
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/layout_jobdescription"
                 android:layout_width="match_parent"
                 android:layout_height="5dp"
                 android:orientation="vertical"
@@ -116,6 +127,46 @@
                     android:gravity="left"
                     android:textStyle="bold"/>
                 <TextView
+                    android:id="@+id/tv_jobdesc_jobdesc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"
+                    android:layout_marginBottom="10dp"
+                    android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
+                    android:gravity="left"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_companyoverview"
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:orientation="vertical"
+                android:background="#F0F0FF"
+                android:gravity="center_horizontal">
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="#FFFFFF"
+                android:padding="15dp"
+                >
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:text="Company Overview"
+                    android:layout_marginBottom="5dp"
+                    android:gravity="left"
+                    android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/tv_jobdesc_jobcompanyoverview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
@@ -163,6 +214,7 @@
                    />
 
                 <TextView
+                    android:id="@+id/tv_jobdesc_joblocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
@@ -181,6 +233,7 @@
                     />
 
                 <TextView
+                    android:id="@+id/tv_jobdesc_jobaddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
@@ -199,48 +252,49 @@
                     />
 
                 <TextView
+                    android:id="@+id/tv_jobdesc_jobspecialization"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
                     android:layout_marginBottom="10dp"
                     android:text="Technology"
                     android:gravity="left"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:orientation="vertical"
-                android:background="#F0F0FF"
-                android:gravity="center_horizontal">
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="#FFFFFF"
-                android:padding="15dp"
-                >
-
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:text="Company Overview"
+                    android:textSize="18sp"
+                    android:text="Job Date Posted"
                     android:layout_marginBottom="5dp"
                     android:gravity="left"
-                    android:textStyle="bold"/>
+                    />
+
                 <TextView
+                    android:id="@+id/tv_jobdesc_jobdateposted"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textColor="@color/black"
+                    android:textSize="16sp"
                     android:layout_marginBottom="10dp"
-                    android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
+                    android:text=""
+                    android:gravity="left"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:text="Salary"
+                    android:layout_marginBottom="5dp"
+                    android:gravity="left"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_jobdesc_jobsalary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:layout_marginBottom="10dp"
+                    android:text=""
                     android:gravity="left"/>
             </LinearLayout>
 
@@ -252,6 +306,7 @@
                 android:gravity="center_horizontal">
 
             </LinearLayout>
+
 
             <RelativeLayout
                 android:padding="15dp"
@@ -266,16 +321,16 @@
                 <Button
                     android:layout_marginRight="5dp"
                     android:background="@drawable/shapebutton"
-                    android:id="@+id/btn_savejob"
+                    android:id="@+id/btn_savejobdesc"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:text="Save"/>
 
                 <Button
+                    android:id="@+id/btn_applyjobdesc"
                     android:layout_marginLeft="5dp"
                     android:background="@drawable/shapebutton"
-                    android:layout_toRightOf="@+id/btn_savejob"
-                    android:id="@+id/btn_apply"
+                    android:layout_toRightOf="@+id/btn_savejobdesc"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:text="Apply"/>
