--- a/app/src/main/res/menu/bottom_nav_menu_employer.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_employer.xml
@@ -5,6 +5,10 @@
         android:title="Home" />
 
     <item
+        android:id="@+id/navigation_employerjob"
+        android:title="Job" />
+
+    <item
         android:id="@+id/navigation_employerapplicants"
         android:title="Applicants" />
 
