--- a/app/src/main/res/layout/activity_employer_add_job.xml
+++ b/app/src/main/res/layout/activity_employer_add_job.xml
@@ -69,6 +69,16 @@
         android:textSize="18dp"
         android:hint="Work Address"/>
 
+    <TextView
+        android:id="@+id/tv_addjobemail"
+        android:background="#FFFFFF"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18dp"
+        android:hint="Email"
+        />
+
     <EditText
         android:id="@+id/edittext_addjobemployersalary"
         android:background="#FFFFFF"
