--- a/app/src/main/res/layout/fragment_employer_job.xml
+++ b/app/src/main/res/layout/fragment_employer_job.xml
@@ -38,6 +38,7 @@
                 android:id="@+id/tv_searchemployerspecialization"/>
 
             <TextView
+                android:layout_marginBottom="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="80dp"
@@ -98,7 +99,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerview_employerjobs"
                     android:layout_width="match_parent"
-                    android:layout_height="530dp" />
+                    android:layout_height="500dp" />
 
             </LinearLayout>
 
