--- a/app/src/main/res/layout/fragment_employer_home.xml
+++ b/app/src/main/res/layout/fragment_employer_home.xml
@@ -7,27 +7,10 @@
     android:gravity="center_horizontal"
     tools:context=".employer.EmployerHomeFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="800px"
-        android:orientation="vertical"
-        android:background="@color/design_default_color_primary"
-        android:gravity="center_horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:layout_marginTop="20dp"
-            android:text="Job Posted"
-            android:textStyle="bold"
-            android:textSize="25sp"/>
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="900px"
+        android:layout_height="1400px"
         android:orientation="vertical"
         android:gravity="center_horizontal">
 
@@ -39,6 +22,26 @@
             android:text="Recommended Applicants"
             android:textStyle="bold"
             android:textSize="25sp"/>
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recommendedswipe">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="top"
+                android:orientation="vertical"
+                >
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerview_recommendedapplicants"
+                    android:layout_width="match_parent"
+                    android:layout_height="520dp" />
+
+            </LinearLayout>
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </LinearLayout>
 
